feat: BoardServiceImpl 구현체 작성 및 게시판별 최신 게시글 5개 조회 기능 추가
# 📌 변경 목적
BoardService 인터페이스에 대한 구현체 BoardServiceImpl을 작성하였으며, 게시판별 최신 게시글 5개를 조회하는 로직과 게시판 ID 유효성 검증 기능을 포함하였습니다.

# ✨ 주요 구현 내용
- `loadTop5LatestPostsByBoard()`
  - 모든 활성화된 게시판(Board)에 대해 해당 게시판의 활성화된 게시글(Posts) 중 작성일 기준으로 내림차순 정렬하여 상위 5개만 조회
  - 결과를 Map<boardId, List<Posts>> 형식으로 반환

- `validateBoard(String boardId)`
  - 게시판 ID의 존재 여부 확인
  - null 또는 공백 문자열에 대한 예외 처리 포함

# ⚠ 향후 구현 예정
- `renameBoard(String oldName, String newName)`
- `deleteBoard()`
  → 현재 구현되지 않았으며, 이후 개발 예정

# 📁 관련 클래스
- `BoardServiceImpl` (구현체)
- `BoardService` (인터페이스)
- `BoardRepository`, `PostsRepository`
- `Board`, `Posts` (엔티티)

# 📅 작업 일자
2025.07.04